[Feat] Payment with VNPAY

--- a/frontend/src/components/header/header.module.scss
+++ b/frontend/src/components/header/header.module.scss
@@ -10,5 +10,9 @@
         display: flex;
         justify-content: flex-end;
         margin: 0 2em 0 0;
+        .cart{
+            cursor: pointer;
+        }
     }
+    
 }
