--- a/frontend/src/components/eventItem/eventItem.module.scss
+++ b/frontend/src/components/eventItem/eventItem.module.scss
@@ -1,4 +1,6 @@
 .event{
+    animation: scaleUp 0.5s ease-out forwards;
+    transform-origin: center;
     min-height: 12.5em;
     min-width: 20em;
     background-size: cover;
@@ -46,3 +48,13 @@
        
     }
 }
+@keyframes scaleUp {
+    0% {
+      transform: scale(0);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
