--- a/frontend/src/components/input/input.module.scss
+++ b/frontend/src/components/input/input.module.scss
@@ -1,6 +1,7 @@
 .inputContainer{
     display: flex;
     flex-direction: column;
+    position: relative;
     input {
         margin-top: .5em;
         background: white;
@@ -18,6 +19,14 @@
         padding: .5em .5em;
         border-radius: 10px;
         font-family: 'Montserrat';
+    }
+    .icon{
+        position: absolute;
+        bottom: 1em;
+        right: 1em;
+        margin: 0 !important;
+        cursor: pointer;
+        color: silver;
     }
 
 }
