--- a/frontend/src/components/eventCart/eventCart.module.scss
+++ b/frontend/src/components/eventCart/eventCart.module.scss
@@ -6,9 +6,14 @@
     padding: 1em;
     border-radius: 5px;
     margin: .5em 0;
+    cursor: pointer;
+    &:hover {
+        box-shadow: 1px 1px 1px silver;
+    }
     .coverImg{
-        width: 20em;
-        height: 10em;
+        width: 90%;
+        min-width: 16em;
+        min-height: 8em;
         background-size: cover;
         background-position: center;
         border-radius: 5px;
