--- a/frontend/src/components/eventCart/eventCart.module.scss
+++ b/frontend/src/components/eventCart/eventCart.module.scss
@@ -53,3 +53,29 @@
         }
     }
 }
+
+.bookingContainer{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: .5em 0;
+    
+    .time {
+        color: rgb(116, 116, 116);
+        border-right: 1px solid silver;
+        display: flex;
+        align-items: center;
+    }
+    .info {
+        .detail{
+            color: #379777;
+            font-style: italic;
+            cursor: pointer;
+        }
+        padding: 0 0 0 1em;
+        font-size: 12px;
+        // border-bottom: 1px dashed silver;
+        h4{
+            margin: 0;
+        }
+    }
+}
