--- a/frontend/src/components/header/header.module.scss
+++ b/frontend/src/components/header/header.module.scss
@@ -13,6 +13,14 @@
         .cart{
             cursor: pointer;
         }
+        .event{
+            cursor: pointer;
+            border: 1px solid black;
+            padding: .5em;
+            margin: 0 1em;
+            border-radius: 20px;
+            color: #379777;
+        }
     }
     
 }
